fix overflow

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -125,6 +125,7 @@
     width: 100%;
     max-width: 480px;
     height: 100%;
+    overflow-y: scroll;
   }
   .page-content {
     flex-direction: column;
